# kappaio-lighting-widget

./: Makefile  README.md
cmake-build/: CMakeLists.txt  clean-cmake.sh  postinst
files/: register
files/webapp/: hue_widget.html
files/webapp/css/: jquery.nouislider.css  widget_point.css
files/webapp/js/: widget_point.js
src/: Makefile
